--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="home-slider owl-carousel">
       <div class="slider-item">
         <div class="container">
-          <div class="row d-flex slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+          <div class="row d-flex slider-text justify-content-center align-items-center">
 
           	<div class="img" style="background-image: url(images/logo.svg);"></div>
 
