--- a/index.html
+++ b/index.html
@@ -42,27 +42,18 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-
-    <section class="home-slider owl-carousel">
-      <div class="slider-item">
-        <div class="container">
-          <div class="row d-flex slider-text justify-content-center align-items-center">
-
-          	<div class="img" style="background-image: url(images/logo.svg);"></div>
-
-            <div class="text d-flex align-items-center ftco-animate">
-            	<div class="text-2 pb-lg-5 mb-lg-4 px-4 px-md-5">
-		            <h1 class="mb-5">I am a Baker &amp; I Love Cake</h1>
-		            <p class="mb-md-5">We are a fine baking firm based in Pune, India. Long live Cake, long live Cookies!</p></p>
-		            <p><a href="foods.html" class="btn btn-black px-3 px-md-4 py-3">Museum of Cake<span class="icon-arrow_forward ml-lg-4"></span></a></p>
-	            </div>
-            </div>
-
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/logo.svg');">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row no-gutters slider-text align-items-end justify-content-center">
+          <div class="col-md-9 ftco-animate pb-5 text-center">
+            <h1 class="mb-5">I am a Baker &amp; I Love Cake</h1>
+            <p class="mb-md-5">We are a fine baking firm based in Pune, India. Long live Cake, long live Cookies!</p></p>
+                <p><a href="foods.html" class="btn btn-black px-3 px-md-4 py-3">Museum of Cake<span class="icon-arrow_forward ml-lg-4"></span></a></p>
           </div>
         </div>
       </div>
     </section>
-    <br>
 
     <section class="ftco-section ftco-no-pt">
     	<div class="container">
