--- a/about.html
+++ b/about.html
@@ -48,17 +48,18 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">About Us</h1>
+            <h1 style="color: #ffcd3c" class="mb-3 bread">About Us</h1>
             <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
     </section>
+    <br>
 
        <section class="ftco-section ftco-no-pt">
       <div class="container">
         <div class="row">
-        <div class="sidebar-wrap">
+        <div class="sidebar-wrap" style="background-color: #f9fce1">
               <div class="sidebar-box p-4 about text-center ftco-animate">
                 <h2 class="heading mb-4">About Me</h2>
                 <img src="images/author.jpg" class="img-fluid" alt="Colorlib Template">
